trying to make the fcc landing page go live

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=RocknRoll+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     
-    <link rel="stylesheet" href="../css/fcc_product.css">
+    <link rel="stylesheet" href="./css/fcc_product.css">
     <title>FCC PRODUCT LANDING PAGE</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
                 <nav id="nav-bar">
                     <div class="brand">
                         <a href="#features">
-                            <img src="../img/favicon.png" alt="logo" id="header-img" class="logo">
+                            <img src="./img/favicon.png" alt="logo" id="header-img" class="logo">
                         </a>
                     </div>
                     <div class="nav-list">
