changed the linking of the files

--- a/fcc_product_landing_page/fcc_product_page.html
+++ b/fcc_product_landing_page/fcc_product_page.html
@@ -19,7 +19,7 @@
                 <nav id="nav-bar">
                     <div class="brand">
                         <a href="#features">
-                            <img src="./img/favicon.png" alt="logo" id="header-img" class="logo">
+                            <img src="../img/favicon.png" alt="logo" id="header-img" class="logo">
                         </a>
                     </div>
                     <div class="nav-list">
