--- a/fcc_survey_form/survey_form.html
+++ b/fcc_survey_form/survey_form.html
@@ -19,7 +19,7 @@
         </header>
         <div id="form-container">
             <section id="part1">
-                <img src="img/im103.jpg" alt="form-pic" id="form-pic">
+                <img src="../img/im103.jpg" alt="form-pic" id="form-pic">
             </section>
             <form action="#" id="survey-form">
                 <div class="item">
