--- a/fcc_tribute_page/islam_tribute.html
+++ b/fcc_tribute_page/islam_tribute.html
@@ -21,7 +21,7 @@
         <figure>
             <img id="hero-img" title="mosque" src="https://www.teahub.io/photos/full/51-516510_islamic-wallpaper-hd-1080p.jpg" alt="man praying">
             <figcaption>
-                A person praying
+                A mosque
             </figcaption>
         </figure>
         <article id="article1">
