made a few changes to the background image

--- a/fcc_portfolio_site/index.html
+++ b/fcc_portfolio_site/index.html
@@ -55,8 +55,8 @@
             </div>
         </section>
         <section class="portfolio-section" id="projects">
-            <a href="#" class="project-tile">
-                <img class="project-img" src="./portfolio/tribute-pg.png" alt="tribute-project-img">
+            <a href="https://codepen.io/mwanaidi-m/full/ZEBqOYp" target="_blank" class="project-tile">
+                <img class="project-img" src="https://images.pexels.com/photos/3023502/pexels-photo-3023502.jpeg" alt="tribute-project-img">
                 <h3 class="project-title"><span>&lcub;</span> tribute page <span>&rcub;</span></h3>
                 <div class="project-desc">
                     <p>Create a simple tribute page to appreciate a topic/subject of your choice.</p>
@@ -68,8 +68,8 @@
                     </p>
                 </div>
             </a>
-            <a href="#" class="project-tile">
-                <img class="project-img" src="./portfolio/survey-form.png" alt="survey-form-project-img">
+            <a href="https://codepen.io/mwanaidi-m/full/MWbXEbj" target="_blank" class="project-tile">
+                <img class="project-img" src="https://images.pexels.com/photos/792051/pexels-photo-792051.jpeg" alt="survey-form-project-img">
                 <h3 class="project-title"><span>&lcub;</span> survey form <span>&rcub;</span></h3>
                 <div class="project-desc">
                     <p>A form to showcase understanding of the form tag and the different types of inputs.</p>
@@ -81,8 +81,8 @@
                     </p>
                 </div>
             </a>
-            <div class="project-tile">
-                <img class="project-img" src="./portfolio/product-landing-pg.png" alt="landing-project-img">
+              <a href="https://codepen.io/mwanaidi-m/full/abBjNwy" target="_blank" class="project-tile">
+                <img class="project-img" src="https://images.pexels.com/photos/2866796/pexels-photo-2866796.jpeg" alt="landing-project-img">
                 <h3 class="project-title"><span>&lcub;</span> product landing page <span>&rcub;</span></h3>
                 <div class="project-desc">
                     <p>A sample product landing page created using flexbox and grid.</p>
@@ -93,9 +93,9 @@
                         </ul>
                     </p>
                 </div>
-            </div>
-            <div class="project-tile">
-                    <img class="project-img" src="./portfolio/documentation-pg.png" alt="documentation-project-img">
+              </a>
+              <a href="https://codepen.io/mwanaidi-m/full/ZEBoZXG" target="_blank" class="project-tile">
+                    <img class="project-img" src="https://images.pexels.com/photos/5518867/pexels-photo-5518867.jpeg" alt="documentation-project-img">
                     <h3 class="project-title"><span>&lcub;</span> technical documentation page <span>&rcub;</span></h3>
                     <div class="project-desc">
                         <p>this page was aimed at practising the concept of positioning as well as other CSS concepts.</p>
@@ -106,7 +106,7 @@
                             </ul>
                         </p>
                     </div>
-            </div>
+              </a>
         </section>
         <section class="portfolio-section" id="contact">
             <div class="contact-heading">
@@ -114,9 +114,9 @@
                 <p>Connect with me:</p>
             </div>
             <div class="contact-links">
-                <a href="#"><i id="profile-link" class="fab fa-github fa-2x"></i>GitHub</a>
-                <a href="#"><i id="profile-link" class="fab fa-codepen fa-2x"></i>CodePen</a>
-                <a href="#"><i id="profile-link" class="fab fa-free-code-camp fa-2x"></i>FreeCodeCamp</a>
+                <a href="https://github.com/Mwanaidi-M"><i id="profile-link" class="fab fa-github fa-2x"></i>GitHub</a>
+                <a hhref="https://codepen.io/your-work"><i id="profile-link" class="fab fa-codepen fa-2x"></i>CodePen</a>
+                <a href="https://www.freecodecamp.org"><i id="profile-link" class="fab fa-free-code-camp fa-2x"></i>FreeCodeCamp</a>
             </div>
         </section>
         <section class="portfolio-footer">
